--- a/Proyecto7/styles.css
+++ b/Proyecto7/styles.css
@@ -5,7 +5,7 @@ body {
     justify-content: center;
     height: 100vh;
     margin: 0;
-    background: rgb(0, 0, 0);
+    background: rgb(36, 36, 36);
   }
 
   table {
@@ -21,32 +21,38 @@ body {
 
   input[type="button"]{
       padding: 5px;
-      border-radius: 20px;
+      border-radius: 50%;
       color: rgb(255, 255, 255);
-      background-color: rgb(0, 0, 0);
+      background-color: rgb(20, 20, 20);
       font-size: 20px;
       border: 1px solid transparent;
   }
   input[type="button"][value="="] {
-      color: rgb(0, 0, 0);
-      background: rgb(69, 14, 114);
+      font-size: 1em;
+      color: rgb(255, 255, 255);
+      background: rgb(59, 59, 59);
   }
-
+  
   #display{
-      border-radius: 20px;
       background-color: rgb(0, 0, 0);
       width: 200px;
       padding: 10px;
       margin-bottom: 10px;
-      color: rgb(69, 14, 114);
+      color: rgb(255, 255, 255);
       text-align: right;
       font-size: 30px;
       margin-top: 0.5em;
+      margin-bottom: -0.5em;
+      border: none;
   }
 
   .calculadora{
-    background-color: rgb(168, 168, 168);
+    background-color: rgb(0, 0, 0);
     padding: 15px;
     border-radius: 10px;
-    box-shadow: 0px 0px 33px 4px #000000;
+    box-shadow: 0px 0px 33px 4px #000000ab;
+  }
+
+  .borrar{
+    color: red;
   }
