--- a/Proyecto8/styles.css
+++ b/Proyecto8/styles.css
@@ -6,5 +6,15 @@
 
 body{
     width: 90%;
+    padding: 20px;
     margin: 0 auto;
+}
+
+.nombre-col {
+    flex: 0 0 10%;
+    max-width: 10%;
+}
+.fecha-col {
+    flex: 0 0 10%;
+    max-width: 10%;
 }
