--- a/Proyecto10/styles.css
+++ b/Proyecto10/styles.css
@@ -9,6 +9,13 @@ body{
     padding: 20px;
     text-align: center;
     background-color: #f5f5f5;
+    height: 100vh;
+    margin-top: 2em;
+    margin-bottom: 5em;
+}
+h1{
+    margin-bottom: 1em;
+    text-transform: uppercase;
 }
 .card{
     margin-bottom: 1em;
@@ -23,4 +30,7 @@ body{
     object-fit: cover;
     display: block;
     margin: 0 auto;
+}
+#producto #description{
+    font-size: 1px;
 }
