--- a/Proyecto10/styles.css
+++ b/Proyecto10/styles.css
@@ -6,31 +6,125 @@
 
 body{
     font-family: 'Noto Sans', sans-serif;
-    padding: 20px;
     text-align: center;
     background-color: #f5f5f5;
     height: 100vh;
-    margin-top: 2em;
     margin-bottom: 5em;
 }
-h1{
+
+/* PALETA DE COLORES*/
+:root{
+    --primary: #008080;
+    --gray: #7c7c7c;
+}
+
+.titulos{
     margin-bottom: 1em;
     text-transform: uppercase;
+    color: var(--primary);
 }
+
+/* NAVBAR */
+nav, .container-fluid{
+    background-color: #dcdcdc !important;
+}
+
+/* TARJETAS */
 .card{
     margin-bottom: 1em;
     transition: 0.3s ease-in-out;
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.25);
 }
 .card:hover{
-    scale: 1.05;
+    scale: 1.1;
 }
-.imagenProducto{
-    width: 250px;
-    height: 250px;
+
+/* titulo */
+.card-body h5{
+    margin: 0.5em 0;
+    color: var(--primary);
+}
+/* descripcion */
+.card-body .card-text{
+    color: var(--gray);
+}
+/* precio */
+.price{
+    font-weight: 800;
+    color: #252525;
+}
+
+.card img{
+    width: 150px;
+    height: 150px;
     object-fit: cover;
     display: block;
-    margin: 0 auto;
+    margin: 0 auto;;
 }
-#producto #description{
-    font-size: 1px;
+.card img:hover{
+    animation: rotate 1s infinite;
+}
+@keyframes  rotate{
+    0%, 50%, 100% { transform: translateY(0px); }
+    25%, 75% { transform: translateY(-3px); }
+}
+
+
+.button {
+    height: 50px;
+    width: 150px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    transition: all 0.5s ease-in-out;
+}
+
+.button:hover {
+    box-shadow: .5px .5px 150px #252525;
+}
+
+.type1::after {
+    content: "THANKS";
+    height: 50px;
+    width: 150px;
+    background-color: #008080;
+    color: #fff;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    transform: translateY(50px);
+    font-size: 1.2rem;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s ease-in-out;
+}
+
+.type1::before {
+    content: "BUY";
+    height: 50px;
+    width: 150px;
+    background-color: #fff;
+    color: #008080;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    transform: translateY(0px) scale(1.2);
+    font-size: 1.2rem;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s ease-in-out;
+}
+
+.type1:hover::after {
+    transform: translateY(0) scale(1.2);
+}
+
+.type1:hover::before {
+    transform: translateY(-50px) scale(0) rotate(120deg);
 }
